ACLOCAL_AMFLAGS= -I m4
include $(top_srcdir)/Makefile.inc
SUBDIRS=
if ENABLE_NLS
XCFLAGS=-DINSTALLPREFIX=INSTALLDIR
if SUPPORT_WIN32
XCFLAGS+=-DSUBLANG_BENGALI_BANGLADESH=0x03 -DSUBLANG_PUNJABI_PAKISTAN=0x03 -DSUBLANG_ROMANIAN_MOLDOVA=0x03
endif
export XCFLAGS
SUBDIRS+=intl po
endif
SUBDIRS+=navit
pkgdoc_DATA = README
EXTRA_DIST = README COPYRIGHT LGPL-2 GPL-2 COPYING INSTALL
DIST_SUBDIRS=intl po navit
