ACLOCAL_AMFLAGS= -I m4
include $(top_srcdir)/Makefile.inc
SUBDIRS=
if ENABLE_NLS
XCFLAGS=-DINSTALLPREFIX=INSTALLDIR
if SUPPORT_WIN32
XCFLAGS+=-DSUBLANG_BENGALI_BANGLADESH=0x03 -DSUBLANG_PUNJABI_PAKISTAN=0x03 -DSUBLANG_ROMANIAN_MOLDOVA=0x03
if SUPPORT_WIN32CE
if SHARED_LIBNAVIT
XCFLAGS+=-L../navit/support/libc -lsupport_libc
AM_MAKEFLAGS=l=l
SUBDIRS+=navit/support/libc
endif
endif
endif
if SUPPORT_ANDROID
XCFLAGS+=-Xcompiler -nostartfiles
endif
export XCFLAGS
SUBDIRS+=intl po man
endif
SUBDIRS+=navit
pkgdoc_DATA = README
EXTRA_DIST = README COPYRIGHT LGPL-2 GPL-2 COPYING INSTALL contrib/*.sh contrib/*.pl
DIST_SUBDIRS=intl po navit man
